# python-image-build

./: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE
src/: main.py
